<resources>
    <string name="app_name">Attach Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Attach Note</string>
    <string name="voicerecognition">Voice recognition</string>
	<string name="menu_share">Share note</string>
	<string name="menu_save">Save note</string>
	<string name="menu_delete">Delete note</string>
	<string name="menu_colors">Colors</string>
	<string name="menu_size">Brush size</string>
	<string name="menu_eraser">Eraser</string>
	<string name="add_note">Add new note</string>
</resources>