<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_voice_recognition"
        android:title="@string/voicerecognition"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_colors"
        android:title="@string/menu_colors"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_eraser"
        android:title="@string/menu_eraser"
        android:orderInCategory="100"
        android:showAsAction="never" />
     <item android:id="@+id/menu_size"
        android:title="@string/menu_size"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
